add torch naive

--- a/Unet_test.ipynb
+++ b/Unet_test.ipynb
@@ -51,10 +51,11 @@
         "import numpy as np\n",
         "import nibabel as nib\n",
         "import os \n",
-        "\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -64,13 +65,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "302b120e-109c-495a-99c3-fdb2f4528960"
+        "outputId": "1b511aa0-72c1-4d7e-9cc9-d288b1445fc8"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +93,7 @@
         "labels = '/content/drive/MyDrive/segmentation/'\n",
         "segmentations =next(os.walk(labels))[2]\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -104,7 +105,7 @@
         "patients.sort()\n",
         "segmentations.sort()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -130,7 +131,7 @@
         "  for i in unique_spational:\n",
         "   print(f'there are {all_spational_slice.count(i)} slice with shape {i}')\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -220,7 +221,7 @@
         "    return_object = box if mask.dtype ==bool else (dict(zip([f\"label{int(i)}\" for i in obj_ids[1:]],box)), box_bool)\n",
         "    return return_object"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -295,7 +296,7 @@
         "            crop_im = im[ y_min - ky - sy : y_max + ky + 1, x_min - kx - sx : x_max + kx  + 1]\n",
         "            return crop_im, crop, \n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -353,7 +354,7 @@
         "    \n",
         "   "
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -380,7 +381,7 @@
         "        p_im_t.append(crop_im)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -395,7 +396,7 @@
         "segment_numpy_t = np.stack(p_seg_t,2)\n",
         "image_numpy_t = np.stack(p_im_t, 2)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -407,7 +408,7 @@
         "train = image_numpy/image_numpy.max()\n",
         "test = image_numpy_t/image_numpy.max()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -419,7 +420,7 @@
         "train_image  = np.transpose(train,(2,0,1))\n",
         "test_image  = np.transpose(test,(2,0,1))"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -431,7 +432,7 @@
         "train_seg = np.transpose(segment_numpy,(2,0,1))\n",
         "test_seg = np.transpose(segment_numpy_t,(2,0,1))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -443,7 +444,7 @@
         "train_seg_bolean = train_seg.astype(bool)\n",
         "test_seg_bolean = test_seg.astype(bool)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -455,7 +456,7 @@
         "train_seg_f = train_seg_bolean.astype(float)\n",
         "test_seg_f = test_seg_bolean.astype(float)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -465,12 +466,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a06d15f3-fd11-4958-8c2e-ccd59525974c"
+        "outputId": "2b7078ce-491d-4947-c079-07f32a678e0d"
       },
       "source": [
         "test_seg_f.shape"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,20 +483,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "k9hoyQRSTbgS"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -504,6 +494,315 @@
       },
       "source": [
         ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ejmgY4FAojSc"
+      },
+      "source": [
+        "# Pytorch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1rxoyUEtpmKL"
+      },
+      "source": [
+        "train_image_torch = np.expand_dims(train_image,1)\n",
+        "train_seg_torch  = np.expand_dims(train_seg_f,1)"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I9NJ_iPypm0Q",
+        "outputId": "e13fdfe1-f079-4ea8-8218-93917e6ae5f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_image_torch.shape"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(622, 1, 192, 192)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vQOqF9i5omM8"
+      },
+      "source": [
+        "def conv1x1_bn_relu(inp_activation, output_activation, BN=True, activation = True):\n",
+        "    \"con 1x1 + Batchnormalization + relu\"\n",
+        "    layer = [nn.Conv2d(inp_activation, output_activation, 1)]\n",
+        "    for i, j in zip([nn.BatchNorm2d(output_activation), nn.ReLU(inplace=True)],[BN, activation]):\n",
+        "        if j==True:\n",
+        "            layer.append(i)\n",
+        "    return nn.Sequential(*layer)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lVM7soCsomPv"
+      },
+      "source": [
+        "def conv3x3_bn_relu(inp_activation, output_activation, BN=True, activation = True):\n",
+        "    \"con 3x3 + Batchnormalization + relu\"\n",
+        "    layer = [nn.Conv2d(inp_activation, output_activation, 3, padding = 1)]\n",
+        "    for i, j in zip([nn.BatchNorm2d(output_activation), nn.ReLU(inplace=True)],[BN, activation]):\n",
+        "        if j==True:\n",
+        "            layer.append(i)\n",
+        "    return nn.Sequential(*layer)"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vxQ_uWWDomSO"
+      },
+      "source": [
+        "class bottleneck_block(nn.Module):\n",
+        "    \n",
+        "    def __init__(self, input_activation, list_filter=[256, 64, 256], down = None):\n",
+        "        super().__init__()\n",
+        "        self.conv1x1_1 = conv1x1_bn_relu(input_activation, list_filter[0])\n",
+        "        self.conv3x3 = conv3x3_bn_relu(list_filter[0], list_filter[1])\n",
+        "        self.conv1x1_2 = conv1x1_bn_relu(list_filter[1], list_filter[2])\n",
+        "        self.down = down\n",
+        "        if down!=None:\n",
+        "            self.contract_conv = down\n",
+        "    def forward(self , inp):\n",
+        "        x = inp\n",
+        "        c = self.conv1x1_1(inp)\n",
+        "        c = self.conv3x3(c)\n",
+        "        result = self.conv1x1_2(c)\n",
+        "        if self.down!=None:\n",
+        "            x = self.contract_conv(inp)\n",
+        "        \n",
+        "        out = result + x\n",
+        "        \n",
+        "        return out\n",
+        "            \n"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HZ0anol1omUc"
+      },
+      "source": [
+        "class conv_block(nn.Module):\n",
+        "    \n",
+        "    def __init__(self, inp_activation, list_filter ,resnet_block = False, downsample= None ):\n",
+        "        super().__init__()\n",
+        "        self.conv3x3_1 = conv3x3_bn_relu(inp_activation, list_filter)\n",
+        "        self.conv3x3_2 = conv3x3_bn_relu(list_filter, list_filter)\n",
+        "        self.down = downsample\n",
+        "    def forward(self , inp):\n",
+        "        c = self.conv3x3_1(inp)\n",
+        "        c = self.conv3x3_2(c)\n",
+        "        return c"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ODZSxdP-omWt"
+      },
+      "source": [
+        "class Unet_res_b(nn.Module):\n",
+        "    def __init__(self, n_class):\n",
+        "        \n",
+        "        super().__init__()\n",
+        "        self.en_block1 = conv_block(1,32)\n",
+        "        self.en_block2 = conv_block(32,64)\n",
+        "        self.en_block3 = conv_block(64,128)\n",
+        "        self.en_block4 = conv_block(128,256)\n",
+        "        self.en_block5 = conv_block(256,512)\n",
+        "        self.en_block6 = conv_block(512, 1024)\n",
+        "\n",
+        "        \n",
+        "        self.transpose5 = nn.ConvTranspose2d(1024,512,2,2)\n",
+        "        self.transpose4 = nn.ConvTranspose2d(512,256,2,2)\n",
+        "\n",
+        "        self.transpose3 = nn.ConvTranspose2d(256,128,2,2)\n",
+        "        self.transpose2 = nn.ConvTranspose2d(128,64,2,2)\n",
+        "        self.transpose1 = nn.ConvTranspose2d(64,32,2,2)\n",
+        "        \n",
+        "        self.de_block1 = conv_block(64,32)\n",
+        "        self.de_block2 = conv_block(128,64)\n",
+        "        self.de_block3 = conv_block(256,128)\n",
+        "\n",
+        "        self.de_block4 = conv_block(512, 256)\n",
+        "        self.de_block5 = conv_block(1024, 512)\n",
+        "        self.out_conv = nn.Conv2d(32, n_class, 1)\n",
+        "\n",
+        "        \n",
+        "    \n",
+        "\n",
+        "    def forward(self, inp):\n",
+        "        el1 = self.en_block1(inp) #  (32,h,w)\n",
+        "        max1 = nn.MaxPool2d(2)(el1) # (32,h//2, w//2)\n",
+        "\n",
+        "        el2 = self.en_block2(max1)    #(64, h//2, w//2)\n",
+        "        max2 = nn.MaxPool2d(2)(el2)  #(64, h//4, w//4)\n",
+        "\n",
+        "        el3 = self.en_block3(max2)    #(128, h//4, w//4)\n",
+        "        max3 = nn.MaxPool2d(2)(el3)  #(128, h//8, w//8)\n",
+        "\n",
+        "        el4 = self.en_block4(max3)    #(256, h//8, w//8)\n",
+        "        max4 = nn.MaxPool2d(2)(el4)  #(256, h//16, w//16)\n",
+        "        \n",
+        "        el5 = self.en_block5(max4)  #(512, h//16, w//16)\n",
+        "        max5 = nn.MaxPool2d(2)(el5)  #(512, h//32, w//32)\n",
+        "        \n",
+        "        el6 = self.en_block6(max5)  #(1024, h//32, w//32)\n",
+        "\n",
+        "        el5 = self.transpose5(el6)  #(512, h//16, w//16)\n",
+        "        cat5 = torch.cat([el5, el5], 1) #(1024, h//16, h//16 )\n",
+        "        d5 =  self.de_block5(cat5)      #(512, h//16, w//16)\n",
+        "        \n",
+        "        tl4 = self.transpose4(d5)       #(256, h//8, w//8)\n",
+        "        cat4 = torch.cat([tl4, el4], 1) #(512, h//8, w//8)\n",
+        "        d4 =  self.de_block4(cat4)     #(256, h//8, w//8)\n",
+        "        \n",
+        "        tl3 = self.transpose3(d4)        #(128, h//4, w//4)\n",
+        "        cat3 = torch.cat([tl3, el3], 1)  #(256, h//4, w//4)\n",
+        "        d3 =  self.de_block3(cat3)        #(128, h//4, w//4)\n",
+        "        \n",
+        "        \n",
+        "        tl2 = self.transpose2(d3)          #(64, h//2, w//2)\n",
+        "        cat2 = torch.cat([tl2, el2], 1)   #(128, h//2, w//2)\n",
+        "        d2 =  self.de_block2(cat2)         #(64, h//2, w//2)\n",
+        "        \n",
+        "        tl1 = self.transpose1(d2)          #(32, h, w)\n",
+        "        cat1 = torch.cat([tl1, el1], 1) #(64, h, w)\n",
+        "        d1 =  self.de_block1(cat1)        #(32, h, w)\n",
+        "        output = self.out_conv(d1) \n",
+        "\n",
+        "        return output\n",
+        "\n"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RVa5_ABxomZA"
+      },
+      "source": [
+        "m = Unet_res_b(2)"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UuZaxOiCo4k1",
+        "outputId": "68c6ef4b-7318-470d-97fc-f64405766fdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "m(torch.tensor(train_image_torch)[:3]).shape"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 2, 192, 192])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s3uVtkvdo5R3"
+      },
+      "source": [
+        "d_tr = torch.utils.data.DataLoader(train_image_torch,32)\n",
+        "d_seg = torch.utils.data.DataLoader(train_seg_torch,32)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CpmNmtNoo5VP",
+        "outputId": "a477981e-f9d8-479b-c34c-3d2ab6a50342",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "iter(d).__next__().shape"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([5, 1, 192, 192])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xtvE06B4o5bg"
+      },
+      "source": [
+        "for im , segi in zip(d_tr, d_seg):\n",
+        "  "
       ],
       "execution_count": null,
       "outputs": []
@@ -918,7 +1217,7 @@
         "\n",
         "model = U_Net_Segmentation()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1030,7 +1329,7 @@
       "source": [
         "optimizer = tf.keras.optimizers.Adam()\n"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1042,7 +1341,7 @@
         "model.compile(optimizer=optimizer, loss=\"sparse_categorical_crossentropy\", metrics=[Dice])\n",
         "                 "
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1061,7 +1360,7 @@
         "                    batch_size=32,\n",
         "                    epochs=70)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,11 +1514,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "77alWyEURNWv",
-        "outputId": "e6483e14-1a18-4c37-e6ff-bd5428090467",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "e6483e14-1a18-4c37-e6ff-bd5428090467"
       },
       "source": [
         "loss = results.history['loss']\n",
@@ -1237,7 +1536,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
