--- a/Unet_test.ipynb
+++ b/Unet_test.ipynb
@@ -60,7 +60,7 @@
         "import plotly.graph_objects as go\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 51,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -70,18 +70,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c53db0c9-9e5d-4f60-d93a-c13c45c4a0bb"
+        "outputId": "5cb0a1e6-ce63-4154-bd7c-3f95e19e5d6c"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 52,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -100,7 +100,7 @@
         "\n",
         "#segmentations =next(os.walk(labels))[2]\n"
       ],
-      "execution_count": 53,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 54,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -164,50 +164,82 @@
         "            x_min = np.nonzero(mask==i)[1].min()\n",
         "            x_max = np.nonzero(mask==i)[1].max()\n",
         "            box.append([x_min, y_min, x_max, y_max])\n",
-        "    return_object = box if mask.dtype ==bool else (dict(zip([f\"label{int(i)}\" for i in obj_ids[1:]],box)), box_bool)\n",
+        "    return_object = {'bbox_bool': box} if mask.dtype ==bool else {'bbox_label': dict(zip([f\"label{int(i)}\" for i in obj_ids[1:]],box)), 'bbox_bool' : box_bool}\n",
         "    return return_object"
       ],
-      "execution_count": 55,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bqPPikDP2Ce6",
-        "outputId": "c5d912c8-8f07-48a0-c6ff-fe27d98acf7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9a9815b0-1400-4844-b895-41009bdb230f"
       },
       "source": [
         "masks = nib.load(segment_list[67])\n",
         "masks = np.array(masks.dataobj)\n",
         "slice_label(masks)"
       ],
-      "execution_count": 76,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "([0, 1, 18, 19], [2, 11, 12, 13, 14, 15, 16, 17], [3, 4, 5, 6, 7, 8, 9, 10])"
+              "{'label_0': [0, 1, 18, 19],\n",
+              " 'label_1': [2, 11, 12, 13, 14, 15, 16, 17],\n",
+              " 'label_2': [3, 4, 5, 6, 7, 8, 9, 10]}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o0f_nVkbvOZr",
-        "outputId": "d331acd9-c082-4a20-8dfb-c5adcf5d568f",
+        "id": "WzgrDJS4HcuH",
+        "outputId": "ebd50592-8b1b-4dad-8fb3-10113a16cc67",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "source": [
+        "make_box(masks[:,:,3])"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'bbox_bool': [174, 155, 229, 232],\n",
+              " 'bbox_label': {'label1': [175, 155, 229, 232],\n",
+              "  'label2': [174, 184, 212, 231]}}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o0f_nVkbvOZr",
+        "outputId": "d331acd9-c082-4a20-8dfb-c5adcf5d568f"
       },
       "source": [
         "masks.shape, np.unique(masks)"
@@ -231,12 +263,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xe8rArssvOeQ",
-        "outputId": "667abb61-181f-472e-dd14-02cd9e4157b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "xe8rArssvOeQ",
+        "outputId": "667abb61-181f-472e-dd14-02cd9e4157b4"
       },
       "source": [
         "plt.imshow(masks[:,:,10])"
@@ -273,12 +305,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CBsqfqvtvOkD",
-        "outputId": "6c1046a7-88e2-4fb5-d583-260e0ca22a58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        }
+        },
+        "id": "CBsqfqvtvOkD",
+        "outputId": "6c1046a7-88e2-4fb5-d583-260e0ca22a58"
       },
       "source": [
         "plt.imshow(masks[:,:,10].astype(np.bool))"
@@ -330,38 +362,36 @@
         "      l1.append(i)\n",
         "    elif len(np.unique(masks[:,:,i])) ==3:\n",
         "      l2.append(i)\n",
-        "  return l0, l1, l2"
+        "  return {'label_0':l0, 'label_1':l1,'label_2': l2}"
       ],
-      "execution_count": 70,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fa4HK8Zh0U9T",
-        "outputId": "c54a1b8c-0603-49aa-b5c8-476a00a49fca",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        },
+        "id": "Fa4HK8Zh0U9T",
+        "outputId": "b6d9cc13-e2a1-426b-ff40-b8d1439e0cca"
       },
       "source": [
-        ""
+        "slice_label(masks)"
       ],
-      "execution_count": 72,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "([0, 1, 2, 3, 4, 5, 6, 20, 21, 22, 23],\n",
-              " [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
-              " [])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 72
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-2aded2777583>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mslice_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmasks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'masks' is not defined"
+          ]
         }
       ]
     },
