--- a/Unet_test.ipynb
+++ b/Unet_test.ipynb
@@ -62,7 +62,7 @@
         "import plotly.graph_objects as go\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -72,18 +72,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "227ca52d-8a86-4402-e67a-8db0e65e642f"
+        "outputId": "b7ad2d6f-a19b-4125-d7ad-3b030d2122ac"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -97,7 +97,7 @@
       "source": [
         "root = '/content/drive/MyDrive/qazal/new_data'"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a69ff7cb-fc84-4caa-b48c-5c90711b685c"
+        "outputId": "743724ce-f2dc-4d3a-8066-0240e1214ff9"
       },
       "source": [
         "im_add = []\n",
@@ -130,7 +130,7 @@
         "im_add.pop(0)\n",
         "  \n"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -174,7 +174,7 @@
         "      l2_1_0.append(i)\n",
         "  return {'label_0':l0, 'label_1_0':l1_0,'label_2_0': l2_0, 'label_2_1_0': l2_1_0}"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -201,38 +201,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M7XJSDlQEhtG",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "8f3220a8-0c85-4102-860e-ab17726677c9"
-      },
-      "source": [
-        "name"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'HK_Case49_segmentation'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 100
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "AMm5fuTBDLh9"
       },
       "source": [
@@ -246,106 +214,6 @@
         "  for j in range(ch):\n",
         "    array_img = nib.Nifti1Image(file1[:,:,j], im.affine)\n",
         "    nib.save(array_img, '/content/drive/MyDrive/qazal/slice_seg/' + name + f'_{j}.nii.gz')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ctpOKs5FFGll"
-      },
-      "source": [
-        "class datas(keras.utils.Sequence):\n",
-        "  def __init__(self, root, b):\n",
-        "    super().__init__()\n",
-        "    self.root = root\n",
-        "    self.b = b\n",
-        "    self.len = len(os.listdir(root))\n",
-        "    self.lis = os.listdir(root)\n",
-        "  def __len__(self):\n",
-        "    return self.len /self.b\n",
-        "  def __getitem__(self, idx):\n",
-        "    im = np.array(nib.load(self.lis[idx]).dataobj)\n",
-        "    return im\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MauoMpleGlqi"
-      },
-      "source": [
-        "f = datas('/content/drive/MyDrive/qazal/slice',4)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YTzZOHLjGls8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c265da99-65e6-4766-909f-a51c385237e0"
-      },
-      "source": [
-        "f"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<__main__.datas at 0x7f25186aa650>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 112
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bKJkrbP4Glvc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2729d0e1-afbc-434d-bf1a-6838d6f591a0"
-      },
-      "source": [
-        "iter(f)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<generator object Sequence.__iter__ at 0x7f25186ffb50>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 114
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jsJ2paxOECPK"
-      },
-      "source": [
-        "assert os.listdir('/content/drive/MyDrive/qazal/slice_seg').__len__()  == os.listdir('/content/drive/MyDrive/qazal/slice').__len__()"
       ],
       "execution_count": null,
       "outputs": []
@@ -464,7 +332,7 @@
         "    return_object = {'bbox_bool': box} if mask.dtype ==bool else {'bbox_label': dict(zip([f\"label{int(i)}\" for i in obj_ids[1:]],box)), 'bbox_bool' : box_bool}\n",
         "    return return_object"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +370,7 @@
         "  )\n",
         "  fig.show()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +409,7 @@
         "            crop_im = im[ y_min - ky - sy : y_max + ky + 1, x_min - kx - sx : x_max + kx  + 1]\n",
         "            return crop_im, crop, \n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -571,7 +439,7 @@
         "    \n",
         "   "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +466,7 @@
         "        p_im_t.append(crop_im)\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +481,7 @@
         "segment_numpy_t = np.stack(p_seg_t,0)\n",
         "image_numpy_t = np.stack(p_im_t, 0)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -625,7 +493,7 @@
         "train = image_numpy/image_numpy.max()\n",
         "test = image_numpy_t/image_numpy.max()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,7 +505,7 @@
         "train_seg_bolean = segment_numpy.astype(bool)\n",
         "test_seg_bolean = segment_numpy_t.astype(bool)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,7 +517,7 @@
         "test_seg_f = np.float32(test_seg_bolean)\n",
         "train_seg_f = np.float32(train_seg_bolean)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -697,7 +565,7 @@
       "source": [
         ""
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +980,7 @@
         "train_image_torch = np.expand_dims(train,1)\n",
         "train_seg_torch  = np.expand_dims(train_seg_f,1)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1124,7 +992,7 @@
         "dataloader_image = torch.utils.data.DataLoader(train_image_torch,32)\n",
         "dataloader_segment = torch.utils.data.DataLoader(train_seg_torch,32)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1152,7 +1020,7 @@
         "        l = F.relu(self.BN2(l))\n",
         "        return l\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1259,7 +1127,7 @@
         "\n",
         "        return output\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1270,7 +1138,7 @@
       "source": [
         "model = Unet(1)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1297,7 +1165,7 @@
         "\n",
         "    return bceloss + dicescore"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1314,7 +1182,7 @@
         "\n",
         "    return intersection / union"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1325,7 +1193,7 @@
       "source": [
         "device = torch.device('cuda')"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1336,24 +1204,24 @@
       "source": [
         "opt = torch.optim.Adam(model.parameters(), lr=0.001)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "H8N10FAsneXn",
-        "outputId": "07b665db-963f-40a0-d60e-5d6873215158",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07b665db-963f-40a0-d60e-5d6873215158"
       },
       "source": [
         "epochs = 10\n",
         "Loss = bce_dice_loss\n",
         "model.to(device)\n"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1446,11 +1314,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "juKjnCuSR_53",
-        "outputId": "0179b1f4-4c80-4e54-a00a-09fbbe49e547",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        }
+        },
+        "outputId": "0179b1f4-4c80-4e54-a00a-09fbbe49e547"
       },
       "source": [
         "loss_item = []\n",
@@ -1472,7 +1340,7 @@
         "  mean_loss = sum(loss_item)/total\n",
         "  print(f'Loss in epoch{epoch} is :', mean_loss)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
